--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@azure/logger": "^1.0.4",
+    "@azure/openai": "^1.0.0-beta.4",
     "@babel/runtime": "^7.22.10",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@kintone/rest-api-client": "^4.1.0",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.5",
-    "langchain": "0.0.132",
+    "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.14.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sweetalert2": "^11.7.27"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
@@ -32,7 +34,7 @@
   "scripts": {
     "ncu": "ncu",
     "standard": "standard",
-    "fix": "standard --fix",
+    "fix": "standard --fix src",
     "build": "set NODE_ENV=development && set BABEL_ENV=development && webpack --mode=development",
     "build:production": "set NODE_ENV=production && set BABEL_ENV=production && webpack --mode=production",
     "zip-init": "kintone-plugin-packer --out dist/plugin.zip pack",
